fazendo os icones aparecerem

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
           <img
             class="top-icons"
-            src="/imagens/icones-telefone.png"
+            src="imagens/icones-telefone.png"
             alt="icones"
           />
           
